@@ -3,6 +3,7 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
 next:
           - support reading action_menu_items from file/folder
           - fix can_submit_commands setting not used from contact (#597)
+          - fix corrupting datafiles when trying to write to full filesystems
           - Logcache:
             - add logcache_import_exclude option
             - remove orphaned plugin output references on logcacheclean
